# netbox-devicelayout

./: .gitignore  CLAUDE.md  README.md  deploy.sh  pyproject.toml
design/: json-data-example.json
netbox_devicelayout/: __init__.py  models.py  signals.py  urls.py  views.py
netbox_devicelayout/migrations/: 0001_initial.py
netbox_devicelayout/static/netbox_devicelayout/css/: layout.css
netbox_devicelayout/static/netbox_devicelayout/js/: editor.js  main.js  renderer.js
netbox_devicelayout/templates/netbox_devicelayout/: _layout_grid.html  port_layout.html
netbox_deviceview2/: __init__.py  models.py  signals.py  urls.py  views.py
netbox_deviceview2/migrations/: 0001_initial.py  0002_devicelayout.py
netbox_deviceview2/static/netbox_deviceview2/css/: layout.css
netbox_deviceview2/static/netbox_deviceview2/js/: editor.js  main.js  renderer.js
netbox_deviceview2/templates/netbox_deviceview2/: _layout_grid.html  devicetype_layout.html  port_layout.html
