[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "netbox-devicelayout"
version = "0.1.0"
description = "Physical layout view and WYSIWYG editor for NetBox device types and module types"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "netbox>=4.1.0",
]

[project.entry-points."netbox_plugins"]
netbox_devicelayout = "netbox_devicelayout:config"

[tool.setuptools.packages.find]
where = ["."]
include = ["netbox_devicelayout*"]
